<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/item_filter"
        android:icon="@drawable/baseline_filter_list_24"
        android:title="@string/filters"
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/filter_by_Date"
                android:title="@string/filter_by_date"/>
            <item
                android:id="@+id/filter_by_room"
                android:title="@string/filter_by_room">
                <menu>

                    <item
                        android:id="@+id/sub_item_1"
                        android:title="@string/cupcake" />
                    <item
                        android:id="@+id/sub_item_2"
                        android:title="@string/donut" />
                    <item
                        android:id="@+id/sub_item_3"
                        android:title="@string/eclair" />
                    <item
                        android:id="@+id/sub_item_4"
                        android:title="@string/froyo" />
                    <item
                        android:id="@+id/sub_item_5"
                        android:title="@string/gingerbread" />
                    <item
                        android:id="@+id/sub_item_6"
                        android:title="@string/honeycomb" />
                    <item
                        android:id="@+id/sub_item_7"
                        android:title="@string/ice_cream_sandwich" />
                    <item
                        android:id="@+id/sub_item_8"
                        android:title="@string/jelly_bean" />
                    <item
                        android:id="@+id/sub_item_9"
                        android:title="@string/kit_kat" />
                    <item
                        android:id="@+id/sub_item_10"
                        android:title="@string/lollipop" />
                </menu>

            </item>

        </menu>

    </item>

</menu>