<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_list_meeting_title"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:gravity="center"
        android:background="@drawable/ic_rounded_edge_title"
        tools:text="The Title of the Meeting"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>
    <ImageView
        android:id="@+id/item_list_meeting_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/item_list_meeting_room_date_layout"
        android:src="@drawable/ic_delete_white_24dp"
        android:contentDescription="@string/bin">

    </ImageView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/item_list_meeting_room_date_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/item_list_meeting_title"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <androidx.appcompat.widget.LinearLayoutCompat

            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/item_list_meeting_salle"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="0dp"
                android:text="@string/salle"
                android:gravity="center"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/item_list_meeting_room_name"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:background="@drawable/ic_rounded_edge_light_grey"
                android:textStyle="bold"
                tools:text="Oreo">

            </TextView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="24dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:gravity="center"
                android:text="@string/quand"
                >

            </TextView>

            <TextView
                android:id="@+id/item_list_meeting_hour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_rounded_edge_light_grey"
                android:gravity="center"
                tools:text="Hour"
                android:textStyle="bold">

            </TextView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/item_list_meeting_participants_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/item_list_meeting_room_date_layout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:text="@string/participants">

        </TextView>
        <TextView
            android:id="@+id/item_list_meeting_participants"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp"

            tools:text="Participant 1, Participant 2, Participant 3">

        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>